--- a/org.eclipse.rcpl.core/src/org/eclipse/rcpl/login/login.fxml
+++ b/org.eclipse.rcpl.core/src/org/eclipse/rcpl/login/login.fxml
@@ -1,28 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import javafx.scene.web.*?>
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane id="loginBorderPane" fx:id="loginBorderPane" prefHeight="310.0" prefWidth="530.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane id="loginBorderPane" fx:id="loginBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 <padding>
 <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
 </padding>
 <center><VBox fx:id="centerVBox" alignment="CENTER" BorderPane.alignment="CENTER">
 <children><GridPane id="loginGridPane" fx:id="loginGridPane" alignment="CENTER" hgap="10.0" maxWidth="-Infinity" minWidth="-Infinity" styleClass="-fx-background-color:  linear-gradient(lightgray, gray); -fx-border-color: white; -fx-border-radius: 20; -fx-padding: 10 10 10 10; -fx-background-radius: 20;" vgap="5.0" VBox.vgrow="NEVER" xmlns:fx="http://javafx.com/fxml">
   <columnConstraints>
-    <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" />
+    <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" prefWidth="150.0" />
     <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
 <ColumnConstraints maxWidth="0.0" minWidth="0.0" prefWidth="0.0" />
   </columnConstraints>
   <rowConstraints>
                   <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-<RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+<RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" />
 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="80.0" prefHeight="80.0" vgrow="SOMETIMES" />
   </rowConstraints>
 <padding>
 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -30,8 +38,13 @@
 <children><Label id="loginLabel" fx:id="" text="E-Mail" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.vgrow="NEVER" /><Label id="loginLabel" text="Password" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.vgrow="NEVER" /><TextField id="loginTextField" fx:id="userId" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.vgrow="NEVER">
 <GridPane.margin>
 <Insets left="5.0" />
-</GridPane.margin></TextField><HBox fx:id="registerButtonHBox" alignment="CENTER_RIGHT" spacing="10.0" GridPane.columnSpan="2" GridPane.rowIndex="3">
-<children><Button id="buttonDemo" fx:id="buttonDemo" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#handleGuest" text="Guest" GridPane.columnIndex="2" GridPane.rowIndex="2">
+</GridPane.margin></TextField><HBox fx:id="registerButtonHBox" alignment="CENTER_RIGHT" spacing="10.0" GridPane.columnSpan="2" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+<children>
+                        <ToggleButton fx:id="buttonShowHide" mnemonicParsing="false" onAction="#onActionShowHide" text="Show/Hide">
+                           <HBox.margin>
+                              <Insets right="30.0" />
+                           </HBox.margin>
+                        </ToggleButton><Button id="buttonDemo" fx:id="buttonDemo" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#handleGuest" text="Guest" GridPane.columnIndex="2" GridPane.rowIndex="2">
 <FlowPane.margin>
 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
 </FlowPane.margin>
@@ -39,7 +52,7 @@
 <Insets />
 </HBox.margin></Button><Button id="buttonRegister" fx:id="buttonSignIn2" alignment="CENTER_RIGHT" contentDisplay="CENTER" disable="true" mnemonicParsing="false" onAction="#handleSignIn" text="Sign In" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" /><Button id="buttonLogin" fx:id="buttonCancel" disable="true" mnemonicParsing="false" onAction="#handleCancel" text="Cancel">
 <HBox.margin>
-<Insets left="10.0" />
+<Insets left="5.0" />
 </HBox.margin></Button><Button id="buttonLogin" fx:id="buttonLogin" disable="true" mnemonicParsing="false" onAction="#handleLogin" text="Login" GridPane.halignment="CENTER" GridPane.rowIndex="2">
 <FlowPane.margin>
 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -62,6 +75,36 @@
       </children>
                   </HBox>
                   <StackPane fx:id="logoArea" prefHeight="32.0" prefWidth="32.0" />
+                  <Label text="2FA Authentication" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+                  <TextField fx:id="authentication" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin>
+                  </TextField>
+                  <Label id="loginLabel" text="Repeat Password" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+                  <Label id="loginLabel" text="Terms and Conditions" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
+                  <WebView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin>
+                  </WebView>
+                  <Label id="loginLabel" text="I agree" GridPane.halignment="RIGHT" GridPane.rowIndex="7" />
+                  <CheckBox mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="7">
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin>
+                  </CheckBox>
+                  <Label id="loginLabel" text="Google Authentication" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
+                  <ImageView fx:id="barCodeImageView" fitHeight="132.0" fitWidth="142.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.rowSpan="5">
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin>
+                  </ImageView>
+                  <PasswordField fx:id="password1" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin>
+                  </PasswordField>
 </children>
 </GridPane>
 </children></VBox>
