--- a/org.eclipse.rcpl.core/src/org/eclipse/rcpl/login/login.fxml
+++ b/org.eclipse.rcpl.core/src/org/eclipse/rcpl/login/login.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane id="loginBorderPane" fx:id="loginBorderPane" maxWidth="-Infinity" minHeight="300.0" minWidth="10.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane id="loginBorderPane" fx:id="loginBorderPane" maxWidth="-Infinity" minWidth="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 <padding>
 <Insets bottom="10.0" left="10.0" right="10.0" top="30.0" />
 </padding>
@@ -26,7 +26,7 @@
 <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" valignment="CENTER" vgrow="SOMETIMES" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="0.0" vgrow="ALWAYS" />
 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="SOMETIMES" />
 </rowConstraints>
 <padding>
@@ -56,7 +56,7 @@
                   <Insets />
                </GridPane.margin>
             </TextField>
-            <GridPane fx:id="signInArea" hgap="5.0" vgap="5.0" GridPane.columnSpan="2" GridPane.rowIndex="5">
+            <GridPane fx:id="signInArea" hgap="5.0" minHeight="0.0" vgap="5.0" GridPane.columnSpan="2" GridPane.rowIndex="5">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="150.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="200.0" />
@@ -74,7 +74,7 @@
                   <Label id="loginLabel" text="Google Authentication" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                   <Line endX="400.0" startX="-100.0" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" />
                   <Label id="loginLabel" text="Repeat Password" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
-                  <Label id="loginLabel" text="Terms and Conditions" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+                  <Label id="loginLabel" text="Terms and Conditions" GridPane.halignment="RIGHT" GridPane.rowIndex="3" GridPane.valignment="TOP" />
                   <PasswordField fx:id="repeatPassword" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets />
