--- a/org.eclipse.rcpl.core/src/css/default.css
+++ b/org.eclipse.rcpl.core/src/css/default.css
@@ -1096,3 +1096,9 @@
 #toolButton:selected{
     -fx-background-color: orange;
 }
+
+#paneBorder{
+	-fx-border-style: solid;
+	-fx-border-color: red;
+	-fx-border-width: 3;
+}
