--- a/org.eclipse.rcpl.core/src/org/eclipse/rcpl/ui/controler/rcpl_uic.fxml
+++ b/org.eclipse.rcpl.core/src/org/eclipse/rcpl/ui/controler/rcpl_uic.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane fx:id="decorationArea" prefHeight="400.0" prefWidth="150.0" style="" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="decorationArea" minHeight="10.0" minWidth="10.0" prefHeight="393.0" prefWidth="540.0" style="" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <!-- TODO Add Nodes -->
   <bottom>
     <HBox fx:id="mainBottomArea" maxHeight="20.0" minHeight="0.0" prefHeight="20.0">
@@ -52,8 +52,12 @@
       </BorderPane.margin>
     </HBox>
   </right>
-  <top>
-    <HBox id="mainTopArea" fx:id="mainTopArea" prefHeight="-1.0" prefWidth="-1.0" BorderPane.alignment="TOP_LEFT">
+<padding>
+<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+</padding>
+<top><StackPane prefHeight="23.0" prefWidth="200.0">
+<children>
+    <HBox id="mainTopArea" fx:id="mainTopArea" alignment="TOP_RIGHT" maxWidth="5000.0" minWidth="10.0" prefHeight="31.0" prefWidth="10000.0" BorderPane.alignment="TOP_LEFT">
       <children><Button fx:id="startMenuButton" mnemonicParsing="false">
 <VBox.margin>
 <Insets top="10.0" />
@@ -81,8 +85,6 @@
 <Insets right="120.0" />
 </BorderPane.margin>
     </HBox>
-  </top>
-<padding>
-<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-</padding>
+</children></StackPane>
+</top>
 </BorderPane>
