--- a/org.eclipse.rcpl.core/src/org/eclipse/rcpl/ui/controler/rcpl_uic.fxml
+++ b/org.eclipse.rcpl.core/src/org/eclipse/rcpl/ui/controler/rcpl_uic.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="decorationArea" minHeight="10.0" minWidth="10.0" prefHeight="393.0" prefWidth="540.0" style="" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="decorationArea" minHeight="10.0" minWidth="10.0" prefHeight="393.0" prefWidth="540.0" style="" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <!-- TODO Add Nodes -->
   <bottom>
     <HBox fx:id="mainBottomArea" maxHeight="20.0" minHeight="0.0" prefHeight="20.0">
@@ -26,7 +31,7 @@
     </HBox>
   </bottom>
   <left>
-    <VBox fx:id="mainLeftBox" minHeight="0.0" minWidth="0.0" padding="$x2" prefHeight="-1.0" prefWidth="-1.0" style="/*-fx-border-color:blue;-fx-border-width:1;*/">
+    <VBox fx:id="mainLeftBox" minHeight="0.0" minWidth="0.0" prefHeight="-1.0" prefWidth="-1.0" style="/*-fx-border-color:blue;-fx-border-width:1;*/">
       <children>
         <HBox fx:id="mainLeftArea" minHeight="10.0" minWidth="0.0" prefHeight="-1.0" prefWidth="10.0" VBox.vgrow="ALWAYS">
           <VBox.margin>
@@ -40,6 +45,9 @@
       <BorderPane.margin>
         <Insets fx:id="x3" />
       </BorderPane.margin>
+         <padding>
+            <Insets top="4.0" fx:id="x4" />
+         </padding>
     </VBox>
   </left>
   <right>
@@ -62,6 +70,15 @@
 <VBox.margin>
 <Insets top="10.0" />
 </VBox.margin></Button>
+                  <HBox fx:id="collapseButtonHBox" alignment="TOP_RIGHT" minHeight="0.0" minWidth="30.0" prefHeight="100.0" prefWidth="30.0">
+                     <children>
+                        <ToggleButton fx:id="topBarCollapseButton" alignment="CENTER_RIGHT" maxHeight="10.0" maxWidth="10.0" minHeight="10.0" minWidth="10.0" mnemonicParsing="false" onAction="#handleTopBarCollapseButton" prefHeight="10.0" prefWidth="10.0" text="t">
+                           <font>
+                              <Font size="5.0" />
+                           </font>
+                        </ToggleButton>
+                     </children>
+                  </HBox>
         <VBox id="mainTopArea" fx:id="topArea" maxHeight="-1.0" maxWidth="-1.0" minHeight="-1.0" prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS">
           <children>
             <HBox id="mainTopArea" fx:id="titleArea" maxHeight="-1.0" minHeight="-1.0" prefHeight="-1.0" prefWidth="10">
