--- a/org.eclipse.rcpl.core/src/css/default.css
+++ b/org.eclipse.rcpl.core/src/css/default.css
@@ -1133,6 +1133,12 @@
 	-fx-border-width: 1;
 }
 
+#transparentBorder{
+	-fx-border-style: solid;
+	-fx-border-color: transparent;
+	-fx-border-width: 1;
+}
+
 #dialogButton {
 	-fx-background-color: transparent;
 }
