--- a/org.eclipse.rcpl.core/src/css/default.css
+++ b/org.eclipse.rcpl.core/src/css/default.css
@@ -622,6 +622,7 @@
 	-fx-background-radius: 3;
 }
 
+/* 
 #homePageButton {
     -fx-background-color: 
         linear-gradient(#686868 0%, #232723 25%, #373837 75%, #757575 100%),
@@ -630,10 +631,8 @@
         linear-gradient(#f5f5f5 0%, #dbdbdb 50%, #cacaca 51%, #d7d7d7 100%);
     -fx-background-insets: 0,1,4,5;
     -fx-background-radius: 9,8,5,4;
-    -fx-padding: 15 30 15 30;
     -fx-font-family: "Helvetica";
-    -fx-font-size: 14px;
-    -fx-font-weight: bold;
+    -fx-font-size: 12px;
     -fx-text-fill: #333333;
     -fx-effect: dropshadow( three-pass-box , rgba(255,255,255,0.2) , 1, 0.0 , 0 , 1);
 }
@@ -641,6 +640,25 @@
 #homePageButton Text {
     -fx-effect: dropshadow( one-pass-box , white , 0, 0.0 , 0 , 1 );
 }
+*/
+
+#homePageButton {
+    -fx-background-color: 
+        #a6b5c9,
+        linear-gradient(#303842 0%, #3e5577 20%, #375074 100%),
+        linear-gradient(#768aa5 0%, #849cbb 5%, #5877a2 50%, #486a9a 51%, #4a6c9b 100%);
+    -fx-background-insets: 0 0 -1 0,0,1;
+    -fx-background-radius: 5,5,4;
+    -fx-text-fill: #242d35;
+    -fx-font-family: "Helvetica";
+    -fx-font-size: 12px;
+    -fx-text-fill: white;
+    -fx-alignment: CENTER_LEFT;
+}
+#homePageButton Text {
+    -fx-effect: dropshadow( one-pass-box , rgba(0,0,0,0.8) , 0, 0.0 , 0 , -1 );
+}
+
 
 #back_button .button {
 	-fx-background-color: white, white;
