--- a/org.eclipse.rcpl.core/src/org/eclipse/rcpl/login/login.fxml
+++ b/org.eclipse.rcpl.core/src/org/eclipse/rcpl/login/login.fxml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.web.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.web.WebView?>
 
-<BorderPane id="loginBorderPane" fx:id="loginBorderPane" maxWidth="-Infinity" minWidth="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane id="loginBorderPane" fx:id="loginBorderPane" maxWidth="-Infinity" minWidth="10.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
 <padding>
 <Insets bottom="10.0" left="10.0" right="10.0" top="30.0" />
 </padding>
@@ -45,11 +54,7 @@
 <Insets />
 </GridPane.margin>
             </PasswordField>
-            <StackPane fx:id="logoArea" prefHeight="32.0" prefWidth="32.0">
-               <children>
-                  <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0" />
-               </children>
-            </StackPane>
+            <StackPane fx:id="logoArea" prefHeight="32.0" prefWidth="32.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
             <Label text="2FA Authentication" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
             <TextField fx:id="authentication" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
